...
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="net.synapticweb.cipherpass.addeditentry.AddeditEntryViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!-- ScrollView distruge funcționalitatea recyclerview-ului
https://stackoverflow.com/questions/27083091/recyclerview-inside-scrollview-is-not-working -->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/addedit_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    style="@style/addedit_field"
                    app:startIconDrawable="@drawable/account">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/username"
                        android:inputType="text"
                        android:text="@={viewModel.username}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

...
                    android:id="@+id/pass_layout"
                    style="@style/addedit_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pass"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:id="@+id/repass"
                    android:inputType="textPassword"
                    android:layout_gravity="start"
                    android:hint="@string/addedit_repass"
                    android:text="@={viewModel.rePassword}"
                    android:autofillHints="@string/addedit_repass"/>

...
                    app:startIconDrawable="@drawable/globe"
                    style="@style/addedit_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/url"
                        android:inputType="text"
                        android:text="@={viewModel.url}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

...

                    <ImageView
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="13dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/comment"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:alpha="0.6"
                        android:id="@+id/comment_img"/>

                    <com.google.android.material.textfield.TextInputLayout
...
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:id="@+id/custom_fields" />

                <Button
                    android:layout_marginTop="20dp"
                    android:id="@+id/add_new_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_field_button" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/save"
            android:src="@drawable/done"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
</layout>
