...
    <string name="addedit_id">Username</string>
    <string name="addedit_pass">Password</string>
    <string name="addedit_repass">Retype password</string>
    <string name="addedit_url">Url</string>
    <string name="addedit_comment">Comment</string>
    <string name="addedit_close">Close</string>
    <string name="addedit_name_empty">The entry name cannot be empty.</string>
    <string name="addedit_id_empty">The username cannot be empty.</string>
    <string name="addedit_pass_empty">The password cannot be empty.</string>
    <string name="addedit_pass_nomatch">The passwords entered do not match.</string>
    <string name="detail_username">Username</string>
    <string name="detail_passwd">Password</string>
    <string name="detail_url">Url</string>
    <string name="detail_comment">Comment</string>
    <string name="detail_date_created">Date created</string>
    <string name="detail_date_modif">Date modified</string>
    <string name="addedit_nochange">No change detected.</string>
    <string name="addedit_save_ok">Save successful.</string>
    <string name="addedit_save_error">An error occurred while saving the entry.</string>
    <string name="confirm_deletion_title">Confirm deletion</string>
    <string name="confirm_deletion_message">Are you sure you want to delete this entry? (Recovery is not possible)</string>
    <string name="deletion_ok">Entry successfully deleted.</string>
    <string name="confirm_discard_title">Discard changes?</string>
...
    <string name="search_hint">Search entries</string>
    <string name="search_title">Search</string>
    <string name="entries_list_sort">Sort order</string>
    <string name="lock_title">Lock database</string>
    <string name="new_field_button">New field</string>
    <string name="new_field_input_title">Add new field</string>
    <string name="new_field_input_hint">Field name</string>
    <string name="insert_cf_error">Error inserting the custom field.</string>
    <string name="value_not_set">Value not set</string>
    <string name="protected_field">Protected</string>
    <string name="delete_custom_field_title">Delete field</string>
    <string name="delete_custom_field_message">Delete this custom field?</string>
    <string name="edit_custom_field">Edit custom field</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="enter_password_title">Provide your password</string>
    <string name="set_icon_fragment_title">Set entry icon</string>
...
    <string name="sort_name_desc_name">Sort by name descending</string>
    <string name="sort_creation_asc_name">Sort by creation date ascending</string>
    <string name="sort_creation_desc_name">Sort by creation date descending</string>
    <string name="sort_modif_asc_name">Sort by modification date ascending</string>
    <string name="sort_modif_desc_name">Sort by modification date descending</string>
    <string name="sort_creation_asc_value">SORT_CREATION_ASC</string>
    <string name="sort_creation_desc_value">SORT_CREATION_DESC</string>
    <string name="sort_name_asc_value">SORT_NAME_ASC</string>
    <string name="sort_name_desc_value">SORT_NAME_DESC</string>
    <string name="sort_modif_asc_value">SORT_MODIF_ASC</string>
    <string name="sort_modif_desc_value">SORT_MODIF_DESC</string>

    <string name="allow_reports_key">acra.enable</string>
...
