<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 Eugen Rădulescu <synapticwebb@gmail.com>
  ~ This file is part of the CipherPass project ( https://github.com/synapticweb/CipherPass ).
  ~ See the LICENSE file in the project root for license terms.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_field_input_hint"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_name_input"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/protected_field"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protected_field"
            android:layout_gravity="center_vertical"
            android:labelFor="@id/protected_field"/>

    </LinearLayout>

</LinearLayout>